# Aulas_FFR

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
aulas/bim_intro/: aula.html  capa_cimatec.html  capa_cimatec.md  index.html
aulas/bim_intro/capas/: capa_cimatec.html  index.html
aulas/bim_intro/css/theme/: index.html
aulas/bim_intro/examples/: markdown.html
aulas/bim_intro/test/: simple.html
aulas/bim_intro_ufba/: capa_ufba_lcad.html  index.html
aulas/bim_intro_ufba/css/: layout.scss
aulas/bim_intro_ufba/css/theme/: index.html
aulas/bim_intro_ufba/examples/: markdown.html
aulas/bim_intro_ufba/test/: simple.html
aulas/legislacao_urbanistica/: aula.html
aulas/legislacao_urbanistica/capas/: capa_cimatec.html
aulas/legislacao_urbanistica/capas/css/: styles.css
aulas/legislacao_urbanistica/css/theme/: index.html
aulas/legislacao_urbanistica/examples/: markdown.html
docs/aulas/bim_intro/: aula.html  capa_cimatec.html  capa_cimatec.md  capa_ufba_lcad.html  index.html
docs/aulas/bim_intro/capas/: capa_cimatec.html  capa_ufba.html
docs/aulas/bim_intro/startbootstrap-coming-soon-gh-pages/: index.html
docs/aulas/bim_intro_ufba/: index.html
docs/aulas/legislacao_urbanistica/: aula.html
docs/aulas/legislacao_urbanistica/capas/: capa_cimatec.html
