[tool.poetry]
name = "aulas_ffr"
version = "0.1.0"
description = ""
authors = ["Fernando Ferraz Ribeiro <ffribeiro@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
dash = "^2.18.0"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.5.34"
mkdocs-jupyter = "^0.25.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
